# thinkrouter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark.py  demo.py
server/: app.py
tests/: test_thinkrouter.py
thinkrouter/: __init__.py  atlas.py  cache.py  classifier.py  cli.py  confidence.py  config.py  constants.py  cost.py  domain.py  embedder.py  exceptions.py  fallback.py  ollama_adapter.py  providers.py  registry.py  router.py  usage.py
