[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkrouter"
version = "0.7.0"
description = "Semantic routing for LLM systems — domain routing, confidence model, cost tracking, fallback chains, and query topology atlas."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "llm","openai","anthropic","inference","routing","domain-routing",
    "semantic","ollama","embedding","atlas","cost-reduction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
classifier  = ["transformers>=4.40.0","torch>=2.0.0"]
openai      = ["openai>=1.30.0"]
anthropic   = ["anthropic>=0.28.0"]
ollama      = ["httpx>=0.25.0"]
embeddings  = ["sentence-transformers>=2.2.0","torch>=2.0.0"]
server      = ["fastapi>=0.110.0","uvicorn[standard]>=0.29.0","python-dotenv>=1.0.0"]
all         = ["thinkrouter[classifier,openai,anthropic,embeddings,server]"]
dev         = ["pytest>=8.0.0","pytest-asyncio>=0.23.0","numpy>=1.24.0","ruff>=0.4.0","mypy>=1.9.0"]

[project.scripts]
thinkrouter = "thinkrouter.cli:main"

[project.urls]
Homepage   = "https://github.com/saikoushiknalubola/thinkrouter"
Repository = "https://github.com/saikoushiknalubola/thinkrouter"
Issues     = "https://github.com/saikoushiknalubola/thinkrouter/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["thinkrouter*","server*"]

[tool.setuptools.package-data]
thinkrouter = ["py.typed"]

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E","F","W"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.9"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
